even more AltSetupHandler stuff

--- a/alt_setup_creator-test.ipynb
+++ b/alt_setup_creator-test.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from alt_setup_creator import load_config"
+    "from alt_setup_creator import AltSetupHandler"
    ]
   },
   {
@@ -19,20 +19,20 @@
    "outputs": [],
    "source": [
     "# TODO: load this from a config?\n",
-    "conf = {\n",
-    "\"SM\": {\n",
-    "    \"g1z\": 1.,\n",
-    "    \"ka\": 1.,\n",
-    "    \"la\": 0.,\n",
-    "},\n",
-    "\"variations\": {\n",
-    "    \"g1z\": [1.e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4, 1e-4, 5e-5, 2e-5, 1e-5],\n",
-    "    \"ka\": [1.e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4, 1e-4, 5e-5, 2e-5, 1e-5],\n",
-    "    \"la\": [1.e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4, 1e-4, 5e-5, 2e-5, 1e-5],\n",
-    "},\n",
-    "}\n",
-    "with open(\"alt-configs.json\", \"w\") as f:\n",
-    "    json.dump(conf, f, indent=2)"
+    "# conf = {\n",
+    "# \"SM\": {\n",
+    "#     \"g1z\": 1.,\n",
+    "#     \"ka\": 1.,\n",
+    "#     \"la\": 0.,\n",
+    "# },\n",
+    "# \"variations\": {\n",
+    "#     \"g1z\": [1.e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4, 1e-4, 5e-5, 2e-5, 1e-5],\n",
+    "#     \"ka\": [1.e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4, 1e-4, 5e-5, 2e-5, 1e-5],\n",
+    "#     \"la\": [1.e-1, 5e-2, 2e-2, 1e-2, 5e-3, 2e-3, 1e-3, 5e-4, 2e-4, 1e-4, 5e-5, 2e-5, 1e-5],\n",
+    "# },\n",
+    "# }\n",
+    "# with open(\"alt-configs.json\", \"w\") as f:\n",
+    "#     json.dump(conf, f, indent=2)"
    ]
   },
   {
@@ -42,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confs = load_config(\"alt-configs.json\")"
+    "alt_setup_handler = AltSetupHandler(\"alt-configs.json\", mirror=True)\n",
+    "alt_configs = alt_setup_handler.get_alt_setup()"
    ]
   },
   {
@@ -56,392 +57,392 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"g1z_pos_1e-01\": {\n",
+      "  \"g1z_pos_1em01\": {\n",
       "    \"g1z\": 1.1,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_1e-01\": {\n",
+      "  \"g1z_neg_1em01\": {\n",
       "    \"g1z\": 0.9,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_5e-02\": {\n",
+      "  \"g1z_pos_5em02\": {\n",
       "    \"g1z\": 1.05,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_5e-02\": {\n",
+      "  \"g1z_neg_5em02\": {\n",
       "    \"g1z\": 0.95,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_2e-02\": {\n",
+      "  \"g1z_pos_2em02\": {\n",
       "    \"g1z\": 1.02,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_2e-02\": {\n",
+      "  \"g1z_neg_2em02\": {\n",
       "    \"g1z\": 0.98,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_1e-02\": {\n",
+      "  \"g1z_pos_1em02\": {\n",
       "    \"g1z\": 1.01,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_1e-02\": {\n",
+      "  \"g1z_neg_1em02\": {\n",
       "    \"g1z\": 0.99,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_5e-03\": {\n",
+      "  \"g1z_pos_5em03\": {\n",
       "    \"g1z\": 1.005,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_5e-03\": {\n",
+      "  \"g1z_neg_5em03\": {\n",
       "    \"g1z\": 0.995,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_2e-03\": {\n",
+      "  \"g1z_pos_2em03\": {\n",
       "    \"g1z\": 1.002,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_2e-03\": {\n",
+      "  \"g1z_neg_2em03\": {\n",
       "    \"g1z\": 0.998,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_1e-03\": {\n",
+      "  \"g1z_pos_1em03\": {\n",
       "    \"g1z\": 1.001,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_1e-03\": {\n",
+      "  \"g1z_neg_1em03\": {\n",
       "    \"g1z\": 0.999,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_5e-04\": {\n",
+      "  \"g1z_pos_5em04\": {\n",
       "    \"g1z\": 1.0005,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_5e-04\": {\n",
+      "  \"g1z_neg_5em04\": {\n",
       "    \"g1z\": 0.9995,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_2e-04\": {\n",
+      "  \"g1z_pos_2em04\": {\n",
       "    \"g1z\": 1.0002,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_2e-04\": {\n",
+      "  \"g1z_neg_2em04\": {\n",
       "    \"g1z\": 0.9998,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_1e-04\": {\n",
+      "  \"g1z_pos_1em04\": {\n",
       "    \"g1z\": 1.0001,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_1e-04\": {\n",
+      "  \"g1z_neg_1em04\": {\n",
       "    \"g1z\": 0.9999,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_5e-05\": {\n",
+      "  \"g1z_pos_5em05\": {\n",
       "    \"g1z\": 1.00005,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_5e-05\": {\n",
+      "  \"g1z_neg_5em05\": {\n",
       "    \"g1z\": 0.99995,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_2e-05\": {\n",
+      "  \"g1z_pos_2em05\": {\n",
       "    \"g1z\": 1.00002,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_2e-05\": {\n",
+      "  \"g1z_neg_2em05\": {\n",
       "    \"g1z\": 0.99998,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_pos_1e-05\": {\n",
+      "  \"g1z_pos_1em05\": {\n",
       "    \"g1z\": 1.00001,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"g1z_neg_1e-05\": {\n",
+      "  \"g1z_neg_1em05\": {\n",
       "    \"g1z\": 0.99999,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_1e-01\": {\n",
+      "  \"ka_pos_1em01\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.1,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_1e-01\": {\n",
+      "  \"ka_neg_1em01\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.9,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_5e-02\": {\n",
+      "  \"ka_pos_5em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.05,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_5e-02\": {\n",
+      "  \"ka_neg_5em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.95,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_2e-02\": {\n",
+      "  \"ka_pos_2em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.02,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_2e-02\": {\n",
+      "  \"ka_neg_2em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.98,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_1e-02\": {\n",
+      "  \"ka_pos_1em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.01,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_1e-02\": {\n",
+      "  \"ka_neg_1em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.99,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_5e-03\": {\n",
+      "  \"ka_pos_5em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.005,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_5e-03\": {\n",
+      "  \"ka_neg_5em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.995,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_2e-03\": {\n",
+      "  \"ka_pos_2em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.002,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_2e-03\": {\n",
+      "  \"ka_neg_2em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.998,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_1e-03\": {\n",
+      "  \"ka_pos_1em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.001,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_1e-03\": {\n",
+      "  \"ka_neg_1em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.999,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_5e-04\": {\n",
+      "  \"ka_pos_5em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0005,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_5e-04\": {\n",
+      "  \"ka_neg_5em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.9995,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_2e-04\": {\n",
+      "  \"ka_pos_2em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0002,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_2e-04\": {\n",
+      "  \"ka_neg_2em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.9998,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_1e-04\": {\n",
+      "  \"ka_pos_1em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0001,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_1e-04\": {\n",
+      "  \"ka_neg_1em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.9999,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_5e-05\": {\n",
+      "  \"ka_pos_5em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.00005,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_5e-05\": {\n",
+      "  \"ka_neg_5em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.99995,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_2e-05\": {\n",
+      "  \"ka_pos_2em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.00002,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_2e-05\": {\n",
+      "  \"ka_neg_2em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.99998,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_pos_1e-05\": {\n",
+      "  \"ka_pos_1em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.00001,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"ka_neg_1e-05\": {\n",
+      "  \"ka_neg_1em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 0.99999,\n",
       "    \"la\": 0.0\n",
       "  },\n",
-      "  \"la_pos_1e-01\": {\n",
+      "  \"la_pos_1em01\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.1\n",
       "  },\n",
-      "  \"la_neg_1e-01\": {\n",
+      "  \"la_neg_1em01\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.1\n",
       "  },\n",
-      "  \"la_pos_5e-02\": {\n",
+      "  \"la_pos_5em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.05\n",
       "  },\n",
-      "  \"la_neg_5e-02\": {\n",
+      "  \"la_neg_5em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.05\n",
       "  },\n",
-      "  \"la_pos_2e-02\": {\n",
+      "  \"la_pos_2em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.02\n",
       "  },\n",
-      "  \"la_neg_2e-02\": {\n",
+      "  \"la_neg_2em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.02\n",
       "  },\n",
-      "  \"la_pos_1e-02\": {\n",
+      "  \"la_pos_1em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.01\n",
       "  },\n",
-      "  \"la_neg_1e-02\": {\n",
+      "  \"la_neg_1em02\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.01\n",
       "  },\n",
-      "  \"la_pos_5e-03\": {\n",
+      "  \"la_pos_5em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.005\n",
       "  },\n",
-      "  \"la_neg_5e-03\": {\n",
+      "  \"la_neg_5em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.005\n",
       "  },\n",
-      "  \"la_pos_2e-03\": {\n",
+      "  \"la_pos_2em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.002\n",
       "  },\n",
-      "  \"la_neg_2e-03\": {\n",
+      "  \"la_neg_2em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.002\n",
       "  },\n",
-      "  \"la_pos_1e-03\": {\n",
+      "  \"la_pos_1em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.001\n",
       "  },\n",
-      "  \"la_neg_1e-03\": {\n",
+      "  \"la_neg_1em03\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.001\n",
       "  },\n",
-      "  \"la_pos_5e-04\": {\n",
+      "  \"la_pos_5em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0005\n",
       "  },\n",
-      "  \"la_neg_5e-04\": {\n",
+      "  \"la_neg_5em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.0005\n",
       "  },\n",
-      "  \"la_pos_2e-04\": {\n",
+      "  \"la_pos_2em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0002\n",
       "  },\n",
-      "  \"la_neg_2e-04\": {\n",
+      "  \"la_neg_2em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.0002\n",
       "  },\n",
-      "  \"la_pos_1e-04\": {\n",
+      "  \"la_pos_1em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 0.0001\n",
       "  },\n",
-      "  \"la_neg_1e-04\": {\n",
+      "  \"la_neg_1em04\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -0.0001\n",
       "  },\n",
-      "  \"la_pos_5e-05\": {\n",
+      "  \"la_pos_5em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 5e-05\n",
       "  },\n",
-      "  \"la_neg_5e-05\": {\n",
+      "  \"la_neg_5em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -5e-05\n",
       "  },\n",
-      "  \"la_pos_2e-05\": {\n",
+      "  \"la_pos_2em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 2e-05\n",
       "  },\n",
-      "  \"la_neg_2e-05\": {\n",
+      "  \"la_neg_2em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -2e-05\n",
       "  },\n",
-      "  \"la_pos_1e-05\": {\n",
+      "  \"la_pos_1em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": 1e-05\n",
       "  },\n",
-      "  \"la_neg_1e-05\": {\n",
+      "  \"la_neg_1em05\": {\n",
       "    \"g1z\": 1.0,\n",
       "    \"ka\": 1.0,\n",
       "    \"la\": -1e-05\n",
@@ -451,7 +452,7 @@
     }
    ],
    "source": [
-    "print(json.dumps(confs, indent=2))"
+    "print(json.dumps(alt_configs, indent=2))"
    ]
   },
   {
