--- a/miniDST-stage3.ipynb
+++ b/miniDST-stage3.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x76807e0\n"
+      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x75fd900\n"
      ]
     }
    ],
@@ -307,14 +307,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x182f9de0\n"
+      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x18471e50\n"
      ]
     }
    ],
    "source": [
     "weights = [f\"weight_{name}\" for name in [\"nominal\"] + list(alt_configs.keys())]\n",
     "analysis._define((\"weight_nominal\", \"1.0\"), signal_category)\n",
-    "analysis.book_templates(oo_configs, weights, signal_category)"
+    "analysis.book_templates(oo_configs, weights, signal_category)\n",
+    "analysis.book_oo_matrix(list(oo_configs.keys()))"
    ]
   },
   {
@@ -326,8 +327,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 14.5 s, sys: 538 ms, total: 15 s\n",
-      "Wall time: 22.5 s\n"
+      "CPU times: user 17 s, sys: 701 ms, total: 17.7 s\n",
+      "Wall time: 9.44 s\n"
      ]
     }
    ],
@@ -813,6 +814,26 @@
    "outputs": [],
    "source": [
     "# analysis._template_pars[\"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cppyy.LowLevelView at 0x7f79cc08f3b0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis._sums[\"oo_matrix\"][\"4f_sw_sl_eLpR_signal\"].GetPtr()"
    ]
   },
   {
