--- a/miniDST-stage3.ipynb
+++ b/miniDST-stage3.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x75fd900\n"
+      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x6d82400\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x18471e50\n"
+      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x1798c170\n"
      ]
     }
    ],
@@ -327,8 +327,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17 s, sys: 701 ms, total: 17.7 s\n",
-      "Wall time: 9.44 s\n"
+      "CPU times: user 16.8 s, sys: 663 ms, total: 17.4 s\n",
+      "Wall time: 12.5 s\n"
      ]
     }
    ],
@@ -818,22 +818,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<cppyy.LowLevelView at 0x7f79cc08f3b0>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ 17206.526, -1301.2512, -13441.532, -1301.2512, 85534.664, 11954.372, -13441.532, 11954.372, 55347.421 }\n",
+      "{ 545300.06, 141547.68, -303905.44, 141547.68, 308056.37, -1701.5033, -303905.44, -1701.5033, 1045963.7 }\n",
+      "{ 979761.52, -195699.86, -248052.81, -195699.86, 839792.85, 222472.76, -248052.81, 222472.76, 1345177.6 }\n",
+      "{ 19602.743, -1512.7164, -15321.549, -1512.7164, 97543.797, 14125.034, -15321.549, 14125.034, 63159.555 }\n"
+     ]
     }
    ],
    "source": [
-    "analysis._sums[\"oo_matrix\"][\"4f_sw_sl_eLpR_signal\"].GetPtr()"
+    "print(analysis._oo_matrix[\"4f_sw_sl_eLpL_signal\"].GetValue())\n",
+    "print(analysis._oo_matrix[\"4f_sw_sl_eLpR_signal\"].GetValue())\n",
+    "print(analysis._oo_matrix[\"4f_sw_sl_eRpL_signal\"].GetValue())\n",
+    "print(analysis._oo_matrix[\"4f_sw_sl_eRpR_signal\"].GetValue())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ROOT.gStyle.SetOptFit(1011)\n",
+    "# c = ROOT.TCanvas()\n",
+    "# graph = analysis._template_graphs[\"O_g1z_pos_1em05\"][\"4f_sw_sl_eLpR_signal\"][\"g1z\"][0]\n",
+    "# graph.Draw(\"apl\")\n",
+    "# c.Draw()\n",
+    "# c.SaveAs(\"example_par.pdf\")"
    ]
   },
   {
