--- a/miniDST-fit.ipynb
+++ b/miniDST-fit.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x9714240\n"
+      "OBJ: TStyle\tildStyle\tILD Style : 0 at: 0x7f39f30\n"
      ]
     }
    ],
@@ -27,9 +27,9 @@
    "outputs": [],
    "source": [
     "# TODO: make it possible to fit multiple runs simultaneously\n",
-    "run = {\n",
-    "    \"lumi\": 2000,\n",
-    "    # \"lumi\": 25000,\n",
+    "default_lumi = 2000\n",
+    "default_hel = {\n",
+    "    \"lumi_frac\": 1.,\n",
     "    \"e_pol\": 0.,\n",
     "    \"p_pol\": 0.,\n",
     "}\n",
@@ -38,24 +38,24 @@
     "# However, https://arxiv.org/pdf/2503.19983 cites the above but assigns 0.45 to both mixed pols\n",
     "# LCVision scenario uses 3 ab_inv instead of 2\n",
     "ilc_250_h20_lumi = 2000\n",
-    "ilc_250_h20 = [\n",
+    "ilc_250_h20_hel = [\n",
     "    {\n",
-    "        \"lumi\": ilc_250_h20_lumi * 0.675,\n",
+    "        \"lumi_frac\": 0.675,\n",
     "        \"e_pol\": -0.8,\n",
     "        \"p_pol\": 0.3,\n",
     "    },\n",
     "    {\n",
-    "        \"lumi\": ilc_250_h20_lumi * 0.225,\n",
+    "        \"lumi_frac\": 0.225,\n",
     "        \"e_pol\": 0.8,\n",
     "        \"p_pol\": -0.3,\n",
     "    },\n",
     "    {\n",
-    "        \"lumi\": ilc_250_h20_lumi * 0.05,\n",
+    "        \"lumi_frac\": 0.05,\n",
     "        \"e_pol\": -0.8,\n",
     "        \"p_pol\": -0.3,\n",
     "    },\n",
     "    {\n",
-    "        \"lumi\": ilc_250_h20_lumi * 0.05,\n",
+    "        \"lumi_frac\": 0.05,\n",
     "        \"e_pol\": 0.8,\n",
     "        \"p_pol\": 0.3,\n",
     "    },\n",
@@ -123,47 +123,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lumi': 1350.0, 'e_pol': -0.8, 'p_pol': 0.3}\n",
+      "{'lumi_frac': 1.0, 'e_pol': 0.0, 'p_pol': 0.0}\n",
       "hello\n",
-      "{'lumi': 450.0, 'e_pol': 0.8, 'p_pol': -0.3}\n",
-      "hello\n",
-      "{'lumi': 100.0, 'e_pol': -0.8, 'p_pol': -0.3}\n",
-      "hello\n",
-      "{'lumi': 100.0, 'e_pol': 0.8, 'p_pol': 0.3}\n",
-      "hello\n",
-      "[[<cppyy.gbl.RooRealVar object at 0x219d0bf0>, <cppyy.gbl.RooRealVar object at 0x21869850>, <cppyy.gbl.RooRealVar object at 0x21869f50>, <cppyy.gbl.RooRealVar object at 0x217e80c0>, <cppyy.gbl.RooRealVar object at 0x1997c6c0>, <cppyy.gbl.RooRealVar object at 0x20df04c0>, <cppyy.gbl.RooFunctorBinding object at 0x22bf9300>, <cppyy.gbl.RooFunctorBinding object at 0x23178ed0>, <cppyy.gbl.RooFunctorBinding object at 0x23181050>], [<cppyy.gbl.RooRealVar object at 0x231faca0>, <cppyy.gbl.RooRealVar object at 0x22ae3d00>, <cppyy.gbl.RooRealVar object at 0x23258a00>, <cppyy.gbl.RooRealVar object at 0x231675a0>, <cppyy.gbl.RooRealVar object at 0x228f6c50>, <cppyy.gbl.RooRealVar object at 0x51fe4c0>, <cppyy.gbl.RooFunctorBinding object at 0x2330e940>, <cppyy.gbl.RooFunctorBinding object at 0x2331bd40>, <cppyy.gbl.RooFunctorBinding object at 0x233877e0>], [<cppyy.gbl.RooRealVar object at 0x23386f00>, <cppyy.gbl.RooRealVar object at 0x233afb90>, <cppyy.gbl.RooRealVar object at 0x22931960>, <cppyy.gbl.RooRealVar object at 0x231a4570>, <cppyy.gbl.RooRealVar object at 0x233ad620>, <cppyy.gbl.RooRealVar object at 0x232fb2b0>, <cppyy.gbl.RooFunctorBinding object at 0x23461ee0>, <cppyy.gbl.RooFunctorBinding object at 0x2346a9d0>, <cppyy.gbl.RooFunctorBinding object at 0x23313f20>], [<cppyy.gbl.RooRealVar object at 0x23356eb0>, <cppyy.gbl.RooRealVar object at 0x233b1590>, <cppyy.gbl.RooRealVar object at 0x23511e60>, <cppyy.gbl.RooRealVar object at 0x2319a8e0>, <cppyy.gbl.RooRealVar object at 0x2335cea0>, <cppyy.gbl.RooRealVar object at 0x2327a3a0>, <cppyy.gbl.RooFunctorBinding object at 0x233cb540>, <cppyy.gbl.RooFunctorBinding object at 0x2351dcd0>, <cppyy.gbl.RooFunctorBinding object at 0x2349a010>]]\n",
       "start constructor\n",
       "finished constructor\n",
       "start constructor\n",
       "finished constructor\n",
       "start constructor\n",
       "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "start constructor\n",
-      "finished constructor\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooSimultaneous::sim_pdf\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooCategory::runs\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooMultiVarGaussian::multi_gauss_0\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_g1z_pos_1em05_0\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_ka_pos_1em05_0\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_la_pos_1em05_0\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_g1z_pos_1em05_0\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::lumi_0\n",
+      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooProduct::lumi_0\n",
+      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooConstVar::1\n",
+      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::total_lumi\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::e_pol_0\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::p_pol_0\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::g1z\n",
@@ -171,44 +146,15 @@
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::la\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::mu_signal\n",
       "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_ka_pos_1em05_0\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_la_pos_1em05_0\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooMultiVarGaussian::multi_gauss_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_g1z_pos_1em05_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_ka_pos_1em05_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_la_pos_1em05_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_g1z_pos_1em05_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::lumi_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::e_pol_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::p_pol_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_ka_pos_1em05_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_la_pos_1em05_1\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooMultiVarGaussian::multi_gauss_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_g1z_pos_1em05_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_ka_pos_1em05_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_la_pos_1em05_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_g1z_pos_1em05_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::lumi_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::e_pol_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::p_pol_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_ka_pos_1em05_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_la_pos_1em05_2\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooMultiVarGaussian::multi_gauss_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_g1z_pos_1em05_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_ka_pos_1em05_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::O_la_pos_1em05_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_g1z_pos_1em05_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::lumi_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::e_pol_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooRealVar::p_pol_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_ka_pos_1em05_3\n",
-      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_la_pos_1em05_3\n"
+      "[#1] INFO:ObjectHandling -- RooWorkspace::import(ws) importing RooFunctorBinding::expectation_O_la_pos_1em05_0\n"
      ]
     }
    ],
    "source": [
     "# ws = fit_handler.build_model([run])\n",
-    "run_conf = ilc_250_h20\n",
-    "ws = fit_handler.build_model(run_conf)\n",
+    "run_conf = (default_lumi, [default_hel])\n",
+    "# run_conf = (ilc_250_h20_lumi, ilc_250_h20_hel)\n",
+    "ws = fit_handler.build_model(*run_conf)\n",
     "# coupling_pars = fit_handler.coupling_pars\n",
     "coupling_pars = [ws.var(name) for name in conf[\"parameters\"]]\n",
     "# obs_pars = [ws.var(name) for name in conf[\"obs_names\"]]\n",
@@ -230,27 +176,17 @@
       "\n",
       "variables\n",
       "---------\n",
-      "(O_g1z_pos_1em05_0,O_g1z_pos_1em05_1,O_g1z_pos_1em05_2,O_g1z_pos_1em05_3,O_ka_pos_1em05_0,O_ka_pos_1em05_1,O_ka_pos_1em05_2,O_ka_pos_1em05_3,O_la_pos_1em05_0,O_la_pos_1em05_1,O_la_pos_1em05_2,O_la_pos_1em05_3,e_pol_0,e_pol_1,e_pol_2,e_pol_3,g1z,ka,la,lumi_0,lumi_1,lumi_2,lumi_3,mu_signal,p_pol_0,p_pol_1,p_pol_2,p_pol_3,runs)\n",
+      "(O_g1z_pos_1em05_0,O_ka_pos_1em05_0,O_la_pos_1em05_0,e_pol_0,g1z,ka,la,mu_signal,p_pol_0,total_lumi)\n",
       "\n",
       "p.d.f.s\n",
       "-------\n",
-      "RooSimultaneous::sim_pdf[ indexCat=runs run_0=multi_gauss_0 run_1=multi_gauss_1 run_2=multi_gauss_2 run_3=multi_gauss_3 ] = 1\n",
-      "  RooMultiVarGaussian::multi_gauss_0[ x=(O_g1z_pos_1em05_0,O_ka_pos_1em05_0,O_la_pos_1em05_0) mu=(expectation_O_g1z_pos_1em05_0,expectation_O_ka_pos_1em05_0,expectation_O_la_pos_1em05_0) ] = 1\n",
-      "    RooFunctorBinding::expectation_O_g1z_pos_1em05_0[ function=0x228cb2f0 vars=(lumi_0,e_pol_0,p_pol_0,g1z,ka,la,mu_signal) ] = -209271\n",
-      "    RooFunctorBinding::expectation_O_ka_pos_1em05_0[ function=0x23141da0 vars=(lumi_0,e_pol_0,p_pol_0,g1z,ka,la,mu_signal) ] = -438202\n",
-      "    RooFunctorBinding::expectation_O_la_pos_1em05_0[ function=0x2314f2a0 vars=(lumi_0,e_pol_0,p_pol_0,g1z,ka,la,mu_signal) ] = -231556\n",
-      "  RooMultiVarGaussian::multi_gauss_1[ x=(O_g1z_pos_1em05_1,O_ka_pos_1em05_1,O_la_pos_1em05_1) mu=(expectation_O_g1z_pos_1em05_1,expectation_O_ka_pos_1em05_1,expectation_O_la_pos_1em05_1) ] = 1\n",
-      "    RooFunctorBinding::expectation_O_g1z_pos_1em05_1[ function=0x2327f720 vars=(lumi_1,e_pol_1,p_pol_1,g1z,ka,la,mu_signal) ] = -4663.31\n",
-      "    RooFunctorBinding::expectation_O_ka_pos_1em05_1[ function=0x2337d620 vars=(lumi_1,e_pol_1,p_pol_1,g1z,ka,la,mu_signal) ] = -15888.2\n",
-      "    RooFunctorBinding::expectation_O_la_pos_1em05_1[ function=0x233316a0 vars=(lumi_1,e_pol_1,p_pol_1,g1z,ka,la,mu_signal) ] = -8909.03\n",
-      "  RooMultiVarGaussian::multi_gauss_2[ x=(O_g1z_pos_1em05_2,O_ka_pos_1em05_2,O_la_pos_1em05_2) mu=(expectation_O_g1z_pos_1em05_2,expectation_O_ka_pos_1em05_2,expectation_O_la_pos_1em05_2) ] = 1\n",
-      "    RooFunctorBinding::expectation_O_g1z_pos_1em05_2[ function=0x232914b0 vars=(lumi_2,e_pol_2,p_pol_2,g1z,ka,la,mu_signal) ] = -8160.26\n",
-      "    RooFunctorBinding::expectation_O_ka_pos_1em05_2[ function=0x2328a140 vars=(lumi_2,e_pol_2,p_pol_2,g1z,ka,la,mu_signal) ] = -21299.5\n",
-      "    RooFunctorBinding::expectation_O_la_pos_1em05_2[ function=0x2333a240 vars=(lumi_2,e_pol_2,p_pol_2,g1z,ka,la,mu_signal) ] = -10057.2\n",
-      "  RooMultiVarGaussian::multi_gauss_3[ x=(O_g1z_pos_1em05_3,O_ka_pos_1em05_3,O_la_pos_1em05_3) mu=(expectation_O_g1z_pos_1em05_3,expectation_O_ka_pos_1em05_3,expectation_O_la_pos_1em05_3) ] = 1\n",
-      "    RooFunctorBinding::expectation_O_g1z_pos_1em05_3[ function=0x2350ab50 vars=(lumi_3,e_pol_3,p_pol_3,g1z,ka,la,mu_signal) ] = -1566.89\n",
-      "    RooFunctorBinding::expectation_O_ka_pos_1em05_3[ function=0x2331b620 vars=(lumi_3,e_pol_3,p_pol_3,g1z,ka,la,mu_signal) ] = -8061.11\n",
-      "    RooFunctorBinding::expectation_O_la_pos_1em05_3[ function=0x23236940 vars=(lumi_3,e_pol_3,p_pol_3,g1z,ka,la,mu_signal) ] = -3166.28\n",
+      "RooMultiVarGaussian::multi_gauss_0[ x=(O_g1z_pos_1em05_0,O_ka_pos_1em05_0,O_la_pos_1em05_0) mu=(expectation_O_g1z_pos_1em05_0,expectation_O_ka_pos_1em05_0,expectation_O_la_pos_1em05_0) ] = 1\n",
+      "  RooFunctorBinding::expectation_O_g1z_pos_1em05_0[ function=0x21347640 vars=(lumi_0,e_pol_0,p_pol_0,g1z,ka,la,mu_signal) ] = -131325\n",
+      "    RooProduct::lumi_0[ 1 * total_lumi ] = 2000\n",
+      "  RooFunctorBinding::expectation_O_ka_pos_1em05_0[ function=0x21bd85e0 vars=(lumi_0,e_pol_0,p_pol_0,g1z,ka,la,mu_signal) ] = -326754\n",
+      "    RooProduct::lumi_0[ 1 * total_lumi ] = 2000\n",
+      "  RooFunctorBinding::expectation_O_la_pos_1em05_0[ function=0x21b697d0 vars=(lumi_0,e_pol_0,p_pol_0,g1z,ka,la,mu_signal) ] = -161778\n",
+      "    RooProduct::lumi_0[ 1 * total_lumi ] = 2000\n",
       "\n"
      ]
     }
@@ -277,27 +213,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataStore asimovDataFullModel (CountingAsimovData3)\n",
-      "  Contains 4 entries\n",
-      "  Observables: \n",
-      "    1)  O_g1z_pos_1em05_0 = -209271  L(-213939 - -204604)  \"O_g1z_pos_1em05_0\"\n",
-      "    2)   O_ka_pos_1em05_0 = -438202  L(-442123 - -434281)  \"O_ka_pos_1em05_0\"\n",
-      "    3)   O_la_pos_1em05_0 = -231556  L(-237837 - -225275)  \"O_la_pos_1em05_0\"\n",
-      "    4)  O_g1z_pos_1em05_1 = -4663.31  L(-5451.11 - -3875.5)  \"O_g1z_pos_1em05_1\"\n",
-      "    5)   O_ka_pos_1em05_1 = -15888.2  L(-16699.5 - -15076.9)  \"O_ka_pos_1em05_1\"\n",
-      "    6)   O_la_pos_1em05_1 = -8909.03  L(-9977.52 - -7840.55)  \"O_la_pos_1em05_1\"\n",
-      "    7)  O_g1z_pos_1em05_2 = -8160.26  L(-9097.48 - -7223.05)  \"O_g1z_pos_1em05_2\"\n",
-      "    8)   O_ka_pos_1em05_2 = -21299.5  L(-22116.2 - -20482.8)  \"O_ka_pos_1em05_2\"\n",
-      "    9)   O_la_pos_1em05_2 = -10057.2  L(-11322.1 - -8792.38)  \"O_la_pos_1em05_2\"\n",
-      "   10)  O_g1z_pos_1em05_3 = -1566.89  L(-2022.41 - -1111.38)  \"O_g1z_pos_1em05_3\"\n",
-      "   11)   O_ka_pos_1em05_3 = -8061.11  L(-8524.31 - -7597.91)  \"O_ka_pos_1em05_3\"\n",
-      "   12)   O_la_pos_1em05_3 = -3166.28  L(-3788.12 - -2544.44)  \"O_la_pos_1em05_3\"\n",
-      "   13)               runs = run_3(idx = 3)\n",
-      "  \"Run configurations\"\n",
-      "  Dataset variable \"binWeightAsimov\" is interpreted as the event weight\n"
+     "ename": "ReferenceError",
+     "evalue": "attempt to access a null-pointer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mReferenceError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ds \u001b[38;5;241m=\u001b[39m \u001b[43mROOT\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRooStats\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAsymptoticCalculator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGenerateAsimovData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobs_pars\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m ds\u001b[38;5;241m.\u001b[39mPrint(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mReferenceError\u001b[0m: attempt to access a null-pointer"
      ]
     }
    ],
@@ -308,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "45a10ec0",
    "metadata": {},
    "outputs": [
@@ -368,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f9be1fea",
    "metadata": {},
    "outputs": [
@@ -394,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "303da578",
    "metadata": {},
    "outputs": [
@@ -413,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8ce5f60c",
    "metadata": {},
    "outputs": [
@@ -431,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5e1af00d",
    "metadata": {},
    "outputs": [
@@ -499,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bca2d1c9",
    "metadata": {},
    "outputs": [],
@@ -511,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "89f26d40",
    "metadata": {},
    "outputs": [
@@ -537,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d54e38ff",
    "metadata": {},
    "outputs": [
@@ -581,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2a0fe2f7-68ef-4af2-83d7-95b18fe3df4e",
    "metadata": {},
    "outputs": [
